HW WK 4 most Qs

--- a/main.tex
+++ b/main.tex
@@ -1097,30 +1097,51 @@ corrected in time, the application will be refused.}`` --- \textsc{Euro-PCT Guid
     \end{enumerate}
 
     \textsc{9 APR 2018} is the 31-month deadline. 
-    \textsc{30 SEP 2017} is the renewal date. (\textit{\textbf{de ultimo ad ultimo}}), where it just goes to the end of the month regardless.
+    \textsc{30 SEP 2017} is the renewal date (\textit{\textbf{de ultimo ad ultimo}}), where it just goes to the end of the month regardless.
     
     The first is the \underline{later} one. 
     
     Then for 6-month extension we \textbf{DO NOT} have \textit{de ultimo ad ultimo}. So it goes to \textsc{9 OCT 2018}.
     
-    
+    \nt{Summary}{This is the case where \textbf{there is no priority}. \\This means the 31-month date                will always be the \textbf{later date}. \\
+    Standard [\textbf{R. 134 EPC}] applies, i.e., move to the next working day if Office closed for both this 31-month calculation \underline{and} the 6-month ``aggregate period''. \\ The 31-month due date is the \textsc{end of a period} so then we use 6-month extension \textbf{without} \textit{de ultimo ad ultimo}.}                
     
     \vspace{1em}
     L4-24 \\
     An international application is filed on 9 June 2016 claiming priority of a national application filed on 7 September 2015. The applicant wants to enter the regional phase before the EPO as designated Office. Today is 26 February 2018. \\
     What is the last day on which the renewal fee in respect of the third year can be paid to the EPO…
     \begin{enumerate}[label=(\alph*), resume]
-        \item … without additional fee?
-        \item … with additional fee?
+        \item … without additional fee? --- \textsc{2 JUL 2018}
+        \item … with additional fee? --- \textsc{2 JAN 2019}
     \end{enumerate}
 
+     \textsc{9 APR 2018} is the 31-month deadline. 
+    \textsc{30 JUN 2018} is the renewal date (\textit{\textbf{de ultimo ad ultimo}}), where it just goes to the end of the month regardless. \textsc{30 JUN 2018} is a Saturday, so the final deadline is \textsc{2 JUL 2018}.
+    
+    For the additional fees calculation, we add 6 months to the \textbf{due date}. However, the \textbf{due date} is not the same as ``the last possible day for payment,'' but rather just what came out of the calculation, i.e., \textsc{30 JUN 2018}. We add 6 months and we get 30 DEC 2018. However, since the 31-month period is long over, we are not calculating the \textsc{end of a period}, so \textit{de ultimo ad ultimo} applies also to the 6-month ``aggregate period,'' and we end up with 31 DEC 2018. The EPO is closed and the next day it is open is \textsc{2 JAN 2019}.
+    
+     \nt{Summary}{This is the case where \textbf{there is a priority}. \\This means the renewal date (\textsc{2 years + end of month}) will likely be the \textbf{later date}. \\
+    Standard [\textbf{R. 134 EPC}] \underline{does NOT apply}, i.e., DO NOT move to the next working day if Office closed for both this calculation \underline{and} the 6-month ``aggregate period''. \\ The renewal due date is NOT the \textsc{end of a period}, so then we use 6-month extension from the \textit{due date} (regardless whether it's on a weekend) \textbf{with} \textit{de ultimo ad ultimo} \underline{and} [\textbf{R. 134}], if applicable, for the 6-month addition.}                
+    
+    \vspace{1em}
+    
     \item % Question 5
     L4-30 (Basic selection) \\
     A Swedish applicant has filed an international application indicating the Swedish Patent and Registration Office as International Searching Authority. The application is filed in English. During the international search, the ISA is of the opinion that the international application contains 3 inventions, A, B and C, and that with respect to the second and third invention an additional fee has to be paid for each of them if the International Search Report is to cover these inventions. An additional fee is only paid for the second invention B. No demand was filed. The applicant wants to enter the regional phase before the EPO in May 2023, and let the EPO conduct searches on all three inventions A, B and C in the regional phase before deciding with which invention to continue into examination.
     
-    \vspace{1em}
+    
     Which amount of search fee(s) and/or further search fees must the applicant pay at or shortly after entry into the regional phase before the EPO (assuming the EPO shares the non-unity opinion)?
-
+    \vspace{1em}
+    
+    \s \textbf{EPO does not trust any (S)ISA that wasn't them}. So, EPO will need to do a new search anyway, so the fee for a supplementary search under [\textbf{R. 164(1)}] is 1520 \textsc{EUR} --- see [\textbf{Rfees2(1)2}].
+    
+    \s Further, since ISA was \textsc{SE}, the search fee is actually reduced by \textsc{1300 EUR} because of an agreement --- this reduction is in \textbf{\textit{Summary of requirements for entry into the national phase}} (\textsc{BIO} tab after \textsc{Annex L} in PCT Applicant's Guide).
+    
+    \s \textbf{It's irrelevant that he's already paid for B in the international phase}. EPO will draw up a partial supplementary search report based on A only, so he will have to pay a further search fee for B and C, before deciding what invention to limit to for the examination --- \textsc{1520 EUR} each. 
+    
+    
+    
+    
     \item % Question 6
     L4-41 (Basic selection) \\
     Today, 25 February 2019, your Japanese client asks you to enter the regional phase before the EPO for a PCT-application filed in Japanese with the Japanese Patent Office on 26 July 2017, validly claiming priority from a Japanese patent application P-JP dated 1 August 2016. The International Preliminary Examination was carried out by the Japanese Patent Office. Due to an overload of work in the translation department of your client, you are informed that you will receive the English translation of the PCT-application on 23 April 2019.
@@ -1128,6 +1149,10 @@ corrected in time, the application will be refused.}`` --- \textsc{Euro-PCT Guid
     \vspace{1em}
     How would you proceed in order to enter the regional phase, keeping costs for your client to a minimum?
 
+        \vspace{1em}
+        
+     \s Pay all other necessary fees before 31-month entry, i.e., search fee (because EPO wasn't IPEA); designation fee; filing fee; request for examination + examination fee; renewal fee if applicable (here not applicable).
+     \s Do not file translation by EP entry. Will get it in time before 2-month extension deadline of withdrawal. It only costs \textsc{300 EUR} for further processing (FP), which should be cheaper than rushing an emergency translation before 31-month entry [\textbf{Rfees2(1)12}] --- \textsc{not super sure why it's 300 EUR --- ask Zsofia maybe???}. 
     \item % Question 7
     L4-42 (Advanced selection) \\
     An applicant wanted to enter the EP phase with his international application and duly filed a translation into English, and paid the filing fee and search fee. Shortly after the 31m time limit, the applicant received a loss-of-rights communication, indicating that the application was deemed to be withdrawn due to non-payment of the designation and examination fee and not filing the request for examination. One week after having received the communication, the applicant got into the hospital and despite all due care, he missed the time limit to request further processing with respect to the missed periods. 
