--- a/main.tex
+++ b/main.tex
@@ -1160,6 +1160,13 @@ corrected in time, the application will be refused.}`` --- \textsc{Euro-PCT Guid
     \vspace{1em}
     How many re-establishment fees does the applicant need to pay? 
 
+    \vspace{1em}
+    
+    He will have to pay \textbf{2} re-establishment of rights (\texttt{RE}) fees, i.e:\\
+    Designation fee -- 1 \\
+    Examination fee -- 1\\
+    \texttt{RE} fee is always a \underline{flat fee of \textsc{750 eur}}. 
+    
 \end{enumerate}
 \end{enumerate}
 
